<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fragment_login_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_login_guideline_horizontal_40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.4"
        android:orientation="horizontal"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/fragment_login_image_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fragment_login_guideline_horizontal_40"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_login_header"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_login_text_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_guideline_horizontal_40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="?attr/textAppearanceDisplayMedium"
        app:fontFamily="@font/zendots_regular"
        android:text="@string/fragment_login_text_logo_text"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_login_text_input_login_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_text_logo"
        android:layout_marginTop="@dimen/medium_gap_between_components"
        android:layout_marginStart="@dimen/big_gap_between_components"
        android:layout_marginEnd="@dimen/big_gap_between_components"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_login_text_input_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:hint="@string/fragment_login_text_input_login_hint_text"
            android:lines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_login_text_input_password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_text_input_login_wrapper"
        android:layout_marginTop="@dimen/tiny_gap_between_components"
        android:layout_marginStart="@dimen/big_gap_between_components"
        android:layout_marginEnd="@dimen/big_gap_between_components"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_login_text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:hint="@string/fragment_login_text_input_password_hint_text"
            android:lines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_login_text_input_repeat_password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_text_input_password_wrapper"
        android:layout_marginTop="@dimen/tiny_gap_between_components"
        android:layout_marginStart="@dimen/big_gap_between_components"
        android:layout_marginEnd="@dimen/big_gap_between_components"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_lock"
        android:visibility="gone"
        android:alpha="0"
        android:scaleY="0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_login_text_input_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:inputType="textPassword"
            android:hint="@string/fragment_login_text_input_repeat_password_hint_text"
            android:lines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/fragment_login_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_text_input_repeat_password_wrapper"
        android:layout_marginTop="@dimen/medium_gap_between_components"
        android:layout_marginStart="@dimen/big_gap_between_components"
        android:layout_marginEnd="@dimen/big_gap_between_components"
        android:text="@string/fragment_login_button_login_text_sign_in_mode"/>

    <LinearLayout
        android:id="@+id/fragment_login_change_login_type_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/tiny_gap_between_components"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fragment_login_text_change_login_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:text="@string/fragment_login_text_change_login_type_text_sign_in_mode"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_login_button_change_login_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            app:layout_constraintBottom_toBottomOf="@id/fragment_login_text_change_login_type"
            app:layout_constraintStart_toEndOf="@id/fragment_login_text_change_login_type"
            style="@style/Widget.Material3.Button.TextButton"
            android:paddingStart="@dimen/tiny_gap_between_components"
            android:paddingEnd="@dimen/tiny_gap_between_components"
            android:text="@string/fragment_login_button_change_login_type_text_sign_in_mode"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>